packaging/kubernetes/mongodb-stateful.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    k8s-app: mongo
  name: mongo
  namespace: tubee
spec:
  serviceName: mongo
  replicas: 3
  template:
    metadata:
      labels:
        role: mongo
        k8s-app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccount: mongo
      nodeSelector:
        kubernetes.io/hostname: kubernetes-worker005
        #gyselroth.net/physicalNode: "true"
      containers:
        - name: mongo
          image: mongo:3.6
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--smallfiles"
            - "--noprealloc"
            - "--bind_ip"
            - 0.0.0.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
        - name: mongo-sidecar
          image: cvallance/mongo-k8s-sidecar
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
      annotations:
        volume.beta.kubernetes.io/storage-class: "generic-nimble"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 50Gi
