packaging/kubernetes/mongodb-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo
  namespace: tubee
spec:
  clusterIP: None
  selector:
    k8s-app: mongo
  ports:
    - port: 27017
      targetPort: 27017
