packaging/kubernetes/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: nginx
  name: nginx
  namespace: tubee
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: nginx
  sessionAffinity: None
  type: ClusterIP
