packaging/kubernetes/tubee-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: tubee
  name: tubee
  namespace: tubee
spec:
  ports:
  - name: tcp
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    k8s-app: tubee
  sessionAffinity: None
  type: ClusterIP
