packaging/kubernetes/tubee-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tubee
  namespace: tubee
spec:
  rules:
  - host: TUBEE_DOMAIN
    http:
      paths:
      - backend:
          serviceName: tubee
          servicePort: 80
  #tls:
  #- secretName: secret
